--- a/todo-app/todo-backend/docker-compose.dev.yml
+++ b/todo-app/todo-backend/docker-compose.dev.yml
@@ -29,8 +29,8 @@ services:
       context: .
       dockerfile: dev.Dockerfile
     environment:
-      - REDIS_URL=redis://redis:6379
-      - MONGO_URL=mongodb://the_username:the_password@mongo:27017/the_database 
+      - REDIS_URL: redis://redis:6379
+      - MONGO_URL: mongodb://the_username:the_password@mongo:27017/the_database
     command: ['npm', 'run', 'dev']
     container_name: todo-backend-server
 
