--- a/todo-app/todo-frontend/Dockerfile
+++ b/todo-app/todo-frontend/Dockerfile
@@ -18,10 +18,16 @@ COPY --from=test-stage /usr/src/app .
 
 RUN npm install
 
-ENV REACT_APP_BACKEND_URL=http://localhost:3000
+ENV REACT_APP_BACKEND_URL=http://localhost:8080/api/
 
 RUN npm run build
 
 FROM nginx:1.20-alpine
 
 COPY --from=build-stage /usr/src/app/build /usr/share/nginx/html
+
+COPY nginx.conf /etc/nginx/
+
+EXPOSE 3000
+
+CMD ["nginx", "-g", "daemon off;"]
