Added nginx configuration for Ex 12.21

--- a/bloglist/docker-compose.dev.yml
+++ b/bloglist/docker-compose.dev.yml
@@ -22,3 +22,14 @@ services:
     ports:
       - 3000:3000
     container_name: bloglist-frontend
+
+  nginx:
+    image: nginx:1.20-alpine
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    ports:
+      - 8080:80
+    container_name: reverse_proxy
+    depends_on:
+      - app
+      - server
